Fix social section breakpoints (#192)
* Fix social section breakpoints

Additionally, added margin auto to custom section.

* Refactor to use typography breakpoint modifiers

--- a/packages/@xo-union/tk-component-footer-nav/src/css/custom-section.scss
+++ b/packages/@xo-union/tk-component-footer-nav/src/css/custom-section.scss
@@ -1,6 +1,7 @@
 .custom-row {
   composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
   composes: row from '@xo-union/tk-css-bootstrap/lib/grid';
+  composes: m-auto from '@xo-union/tk-css-spacing';
 }
 
 .custom-col {
