DRY usage of bootstrap's nav (#193)

--- a/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
+++ b/packages/@xo-union/tk-component-header-nav/src/css/header-nav.scss
@@ -4,11 +4,8 @@
 }
 
 .desktop-nav-item-list {
-  composes: nav from '@xo-union/tk-css-bootstrap/lib/nav';
   composes: justify-content-center from '@xo-union/tk-css-utilities/lib/flexbox';
-
-  /* Temporary hack to deal with non-responsive reality of the header */
-  flex-wrap: nowrap !important;
+  composes: nav-item-list from './nav-item-list';
 }
 
 .mobile-header-nav {
